--- a/app/SpecRunner.html
+++ b/app/SpecRunner.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Jasmine Spec Runner</title>
-  <link rel="stylesheet" type="text/css" href="assets/libs/jasmine/lib/jasmine-core/jasmine.css">
-  <script src="assets/libs/jasmine/lib/jasmine-core/jasmine.js"></script>
-  <script src="assets/libs/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/libs/jasmine-2.0.0/jasmine.css">
 
+  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/jasmine.js"></script>
+  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/boot.js"></script>
   <!-- include source files here... -->
-  <script type='text/javascript', data-main="main", src="assets/libs/requirejs/require.js"></script> <!--loads main.js-->
+  <script type='text/javascript', data-main="mainSpec", src="assets/libs/requirejs/require.js"></script> <!--loads main.js-->
 
   <!-- include spec files here... -->
   <script src="tests/test.spec.js"></script>
