user bower for jasmine

--- a/app/SpecRunner.html
+++ b/app/SpecRunner.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Jasmine Spec Runner</title>
-  <link rel="stylesheet" type="text/css" href="assets/libs/jasmine-2.0.0/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="assets/libs/jasmine/lib/jasmine-core/jasmine.css">
 
-  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/jasmine.js"></script>
-  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/jasmine-html.js"></script>
-  <script type="text/javascript" src="assets/libs/jasmine-2.0.0/boot.js"></script>
+  <script type="text/javascript" src="assets/libs/jasmine/lib/jasmine-core/jasmine.js"></script>
+  <script type="text/javascript" src="assets/libs/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+  <script type="text/javascript" src="assets/libs/jasmine/lib/jasmine-core/boot.js"></script>
   <!-- include source files here... -->
   <script type='text/javascript', data-main="mainSpec", src="assets/libs/requirejs/require.js"></script> <!--loads main.js-->
 
